--- a/.gitignore
+++ b/.gitignore
@@ -65,4 +65,12 @@ lib/generated_plugin_registrant.dart
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
+# Flutter auto-generated plugin files
+.flutter-plugins
+.flutter-plugins-dependencies
+
+# IntelliJ / Android Studio
+*.iml
+.idea/
+
 # End of https://www.toptal.com/developers/gitignore/api/flutter
