--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   build_runner: ^2.7.1
   build: ^3.1.0
   go_router: ^17.0.0
+  tap_debouncer: ^2.2.0
 
 dev_dependencies:
   flutter_test:
