--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dev_dependencies:
   freezed: ^3.2.3
   json_serializable: ^6.11.1
   riverpod_generator: ^3.0.3
+  fake_cloud_firestore: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
